force-app/main/default/objects/MessageEvent__e/fields/ChannelId__c.field-meta.xml
<CustomField>
    <fullName>ChannelId__c</fullName>
    <label>ChannelId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>