force-app/main/default/objects/MessageEvent__e/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>ContactId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>