force-app/main/default/objects/MessageEvent__e/fields/ConversationId__c.field-meta.xml
<CustomField>
    <fullName>ConversationId__c</fullName>
    <label>ConversationId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>