force-app/main/default/objects/MessageEvent__e/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>