force-app/main/default/objects/MessageEvent__e/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <label>MessageId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>